# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "project"
version = "0.1.0"
edition = "2021"
authors = ["Nonomain"]
keywords = ["what", "your", "project", "is", "about"]
rust-version = "1.68"
#build = "build.rs" # use only if you add your own build.rs file
publish = false
# The value may also be an array of strings which are registry names that are allowed to be published to.
# publish = ["some-registry-name"]

[registries.crates-io]
protocol = "sparse" # will become the default from rust v1.70

[dependencies]
# Add dependencies

[features]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
codegen-units = 1 # build using only one code generation unit (fastest code..?)
panic = 'unwind'
lto = true
strip = true

[profile.release-no-strip]
inherits = "release"
strip = false

[[bin]]
name = "project"
path = "src/main.rs"
